--- a/_pages/studies.html
+++ b/_pages/studies.html
@@ -12,7 +12,7 @@ permalink: /studies/
     border-radius:10px;
     padding: 10px 5px 10px 5px;
     background-color: transparent;
-    color: #FFFFFF;
+    color: #ecebebf6;
     
   }
   .gr_custom_header_1750607604 {
